Fixed a bug with coordinator layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,93 +1,43 @@
 <resources>
     <string name="app_name">Scroll</string>
     <string name="large_text">
-        "Material is the metaphor.\n\n"
+        "Android.\n\n"
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
+        "Android is a mobile operating system based on a modified version of the Linux kernel"
+        "and other open source software, designed primarily for touchscreen mobile devices such as"
+        "smartphones and tablets. Android is developed by a consortium of developers known as the"
+        "Open Handset Alliance, with the main contributor and commercial marketer being Google..\n\n"
 
-        "Bold, graphic, intentional.\n\n"
+        " "
 
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
+        "Initially developed by Android Inc., which Google bought in 2005, Android was unveiled in 2007,"
+        "with the first commercial Android device launched in September 2008. The current stable version "
+        "is Android 10, released on September 3, 2019. The core Android source code is known as Android Open"
+        "Source Project (AOSP), which is primarily licensed under the Apache License. This has allowed variants"
+        "of Android to be developed on a range of other electronics, such as game consoles, digital cameras, "
+        "PCs and others, each with a specialized user interface. Some well known derivatives include Android TV"
+        "for televisions and Wear OS for wearables, both developed by Google.\n\n"
 
-        "Motion provides meaning.\n\n"
+        " "
 
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+        "Androids source code has been used as the basis of different ecosystems, most notably that of Google which "
+        "is associated with a suite of proprietary software called Google Mobile Services (GMS),[11] that frequently "
+        "comes pre-installed on said devices. This includes core apps such as Gmail, the digital distribution platform "
+        "Google Play and associated Google Play Services development platform, and usually apps such as the Google Chrome "
+        "web browser. These apps are licensed by manufacturers of Android devices certified under standards imposed by Google. "
+        "Other competing Android ecosystems include Amazon.coms Fire OS, or LineageOS. Software distribution is generally"
+        "offered through proprietary application stores like Google Play Store or Samsung Galaxy Store, or open source platforms "
+        "like Aptoide or F-Droid, which use software packages in the APK format.\n\n"
 
-        "3D world.\n\n"
 
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
 
-        "Light and shadow.\n\n"
+        "Android Inc. was founded in Palo Alto, California, in October 2003 by Andy Rubin, Rich Miner, Nick Sears, and Chris White."
+        "Rubin described the Android project as "tremendous potential in developing smarter mobile devices that are more aware of its"
+        "owners location and preferences".The early intentions of the company were to develop an advanced operating system for "
+        "digital cameras, and this was the basis of its pitch to investors in April 2004. The company then decided that the market"
+        "for cameras was not large enough for its goals, and by five months later it had diverted its efforts and was pitching Android"
+        "as a handset operating system that would rival Symbian and Microsoft Windows Mobile. "
 
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
 </resources>
